Implemented React stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('header') -%>
 
-<%= Math.random() %>
-<br/>
-<%= content %>
+<div id="root">
+  <%= content %>
+</div>
 
 <%- include('footer') -%>
